update mit license

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_sms_scheduler
-description: "A new Flutter plugin project."
+description: "A Flutter plugin for scheduling SMS messages to be sent at a specific time on Android."
 version: 0.0.1
 homepage: https://github.com/AbdElMalek-L/flutter_sms_scheduler
 repository: https://github.com/AbdElMalek-L/flutter_sms_scheduler
